############################################################
EFA Version 3.0.0.8 Changes
############################################################

Issue #45  Enhancement  - Add ScamNailer ClamAV ruleset (superceded by issue #172)
Issue #49  Enhancement  - Add max spam check size to EFA-Configure
Issue #132 Enhancement  - Increase sa-learn and spamassassin max message size limits
Issue #150 Bug          - Replace dnsmasq with unbound (URIBL_BLOCKED using dnsmasq)
Issue #157 Bug          - Razor failing after registration of service
Issue #156 Bug          - GeoIP Bug Fix
Issue #158 Enhancement  - Sort transport domain list in EFA-Configure
Issue #161 Enhancement  - Increase MailScanner thread limit in EFA-Configure
Issue #164 Enhancement  - Add MailWatch Password Reset to EFA-Configure 
Issue #166 Bug          - MailWatch cron job not executing contents
Issue #167 Enhancement  - Change perms on /etc/postfix/sasl_passwd to 600
Issue #168 Enhancement  - Start regular updates on RegistrarBoundaries.pm 
Issue #169 Enhancement  - Clean up clamav-unoffical-sigs script (superceded by issue #170)
Issue #171 Bug          - Update clamav -- fix any clamav discrepancies
Issue #172 Enhancement  - Review sanesecurity signatures for inclusion in EFA
Issue #173 Enhancement  - Securiteinfo.com support removed from unofficial-sigs
Issue #175 Enhancement  - Set keyboard layout at beginning of EFA-Init

EPEL Repository is now enabled
Add 4GB Swap partition to new builds.

############################################################
EFA Version 3.0.0.7 Changes
############################################################

Issue #30  Enhancement  - Filter out nonspam in quarantine reports (regression fix)
Issue #82  Enhancement  - re2c spamassassin rule complilation support
Issue #128 Enhancement  - Adjust Treat Invalid Watermarks With No Sender as Spam
Issue #133 Enhancement  - Upgrade spamassassin to 3.4.0
Issue #136 Enhancement  - Disable Notify Senders by default in MailScanner