@@ -4,6 +4,7 @@ EFA Version 3.0.0.8 Changes
 
 Issue #45  Enhancement  - Add ScamNailer ClamAV ruleset (superceded by issue #172)
 Issue #49  Enhancement  - Add max spam check size to EFA-Configure
+Issue #72  Enhancement  - EFA MSRE Support
 Issue #132 Enhancement  - Increase sa-learn and spamassassin max message size limits
 Issue #150 Bug          - Replace dnsmasq with unbound (URIBL_BLOCKED using dnsmasq)
 Issue #157 Bug          - Razor failing after registration of service
